EDSC-2882: Ensure all granule links are visible (via scrolling)

--- a/static/src/js/components/GranuleResults/GranuleResultsDataLinksButton.scss
+++ b/static/src/js/components/GranuleResults/GranuleResultsDataLinksButton.scss
@@ -9,3 +9,8 @@
     }
   }
 }
+
+.dropdown-menu {
+  max-height: 250px;
+  overflow-y: scroll;
+}
